# code-aide

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
script-archive/: README.md  amp-install.sh
specs/: auto-migrate-deprecated-installs.md  claude-native-installer-migration.md  missing-coding-llm-cli-tools.md  pre-commit-uv-setup.md  remove-bundled-version-baseline.md  unify-upgrade-eligibility-with-shared-evaluator.md
src/code_aide/: __init__.py  __main__.py  commands_actions.py  commands_tools.py  config.py  console.py  constants.py  detection.py  entry.py  install.py  install_types.py  operations.py  package_managers.py  prereqs.py  status.py  versions.py
src/code_aide/data/: tools.json
tests/: test_commands_actions.py  test_commands_tools.py  test_config.py  test_console.py  test_constants.py  test_detection.py  test_install.py  test_install_types.py  test_operations.py  test_package_managers.py  test_status.py  test_versions.py
